--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@lugia/lugia-web",
   "version": "1.0.110-14",
   "dependencies": {
-    "@lugia/css": "^1.0.3-alpha.2",
+    "@lugia/css": "^1.0.8",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "^1.0.6",
-    "@lugia/theme-config": "^1.0.6",
-    "@lugia/theme-css-hoc": "^1.0.6",
-    "@lugia/theme-hoc": "^1.0.6",
+    "@lugia/theme-config": "^1.0.7",
+    "@lugia/theme-css-hoc": "^1.0.8",
+    "@lugia/theme-hoc": "^1.0.7",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
