--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "jest-cli": "23.4.2",
     "jest-styled-components": "6.2.0",
     "jsdom": "11.12.0",
+    "jsoneditor": "^5.34.0",
     "lint-staged": "7.2.0",
     "prettier": "^1.13.5",
     "promise": "8.0.1",
