--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "^1.0.7",
-    "@lugia/theme-config": "^1.0.9",
-    "@lugia/theme-css-hoc": "^1.0.16",
-    "@lugia/theme-hoc": "^1.0.9",
+    "@lugia/theme-config": "^1.0.12",
+    "@lugia/theme-core": "^1.0.12",
+    "@lugia/theme-css-hoc": "^1.0.19",
+    "@lugia/theme-hoc": "^1.0.14",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
