--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@lugia/lugia-web",
   "version": "1.0.110-14",
   "dependencies": {
-    "@lugia/css": "1.0.12",
+    "@lugia/css": "1.0.13",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "1.0.8",
-    "@lugia/theme-config": "1.0.15",
-    "@lugia/theme-core": "1.0.15",
-    "@lugia/theme-css-hoc": "^1.0.29",
-    "@lugia/theme-hoc": "^1.0.21",
+    "@lugia/theme-config": "1.0.16",
+    "@lugia/theme-core": "1.0.16",
+    "@lugia/theme-css-hoc": "1.0.30",
+    "@lugia/theme-hoc": "1.0.22",
     "@lugia/theme-hoc-devtools": "1.0.2",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
