--- a/package.json
+++ b/package.json
@@ -1,188 +1,1 @@
-{
-  "name": "@lugia/lugia-web",
-  "version": "1.0.110-14",
-  "dependencies": {
-    "@lugia/css": "1.0.12",
-    "@lugia/devtools-material": "^1.0.6",
-    "@lugia/math": "^1.0.6",
-    "@lugia/object-utils": "1.0.8",
-    "@lugia/theme-config": "1.0.15",
-    "@lugia/theme-core": "1.0.15",
-    "@lugia/theme-css-hoc": "^1.0.29",
-    "@lugia/theme-hoc": "^1.0.21",
-    "@lugia/theme-hoc-devtools": "1.0.2",
-    "@lugia/type-utils": "^1.0.4",
-    "babel-polyfill": "6.26.0",
-    "classnames": "2.2.5",
-    "core-js": "^2.5.7",
-    "css-animation": "1.4.1",
-    "decamelize": "^3.2.0",
-    "deepmerge": "^3.2.0",
-    "enquire.js": "^2.1.6",
-    "events": "^3.0.0",
-    "moment": "^2.22.2",
-    "prop-types": "15.5.10",
-    "prop-types-extra": "1.0.1",
-    "rc-align": "2.4.3",
-    "rc-animate": "2.4.1",
-    "rc-pagination": "1.17.3",
-    "rc-select": "^8.6.4",
-    "rc-table": "^6.4.0",
-    "rc-util": "4.0.4",
-    "react-error-overlay": "1.0.9",
-    "styled-components": "^4.2.0",
-    "warning": "3.0.0"
-  },
-  "peerDependencies": {
-    "react": ">16.0.0",
-    "react-dom": ">16.0.0"
-  },
-  "author": "ysstech",
-  "scripts": {
-    "prettier": "prettier --write",
-    "lint": "eslint --ext .js src mock tests",
-    "lint:fix": "eslint --fix --ext .js src mock tests",
-    "lint-staged": "lint-staged",
-    "lint:css": "stylelint './src/widgets/**/*.js'",
-    "start": "lugia-scripts start",
-    "build": "lugia-scripts build",
-    "flow": "flow --show-all-errors > flow-error-detail.log",
-    "flow-check": "node readflow.js",
-    "flow-typed": "flow-typed",
-    "reset-flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
-    "test": "node scripts/test.js --env=jsdom",
-    "cover": "node scripts/test.js --env=jsdom  --coverage",
-    "clean": "npx shx rm -rf dist/ interface/ npm-shrinkwrap.all.json",
-    "dist": "node scripts/create.js && npm run clean && npx cross-env BABEL_ENV=production gulp ",
-    "create-info": "lugia-create-info"
-  },
-  "devDependencies": {
-    "@lugia/jverify": "1.0.6",
-    "@lugia/lugiax-router": "^1.0.10",
-    "@lugia/mega-scripts": "^1.3.35",
-    "@lugia/react-test-utils": "^1.0.0",
-    "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "23.4.2",
-    "babel-loader": "7.1.2",
-    "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
-    "babel-preset-react-app": "3.1.0",
-    "babel-runtime": "6.26.0",
-    "chai": "4.1.0",
-    "chalk": "1.1.3",
-    "cross-env": "5.1.4",
-    "debug": "2.6.8",
-    "dotenv": "4.0.0",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "4.10.0",
-    "eslint-config-react-app": "2.0.1",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "flow-bin": "^0.93.0",
-    "flow-typed": "^2.5.1",
-    "fs-extra": "3.0.1",
-    "global": "^4.3.2",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "gulp-changed": "3",
-    "gulp-newer": "1",
-    "gulp-rename": "1.2.2",
-    "gulp-uglify": "^3.0.1",
-    "gulp-watch": "4",
-    "husky": "^1.0.0-rc.9",
-    "identity-obj-proxy": "3.0.0",
-    "immutable": "3.8.1",
-    "install": "0.10.1",
-    "isomorphic-fetch": "2.2.1",
-    "jest": "23.4.2",
-    "jest-cli": "23.4.2",
-    "jest-styled-components": "6.2.0",
-    "jsdom": "11.12.0",
-    "jsoneditor": "^5.34.0",
-    "lint-staged": "7.2.0",
-    "prettier": "^1.13.5",
-    "promise": "8.0.1",
-    "pump": "1.0.2",
-    "raf": "3.4.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-test-renderer": "^16.8.2",
-    "rimraf": "^2.6.2",
-    "shx": "0.2.2",
-    "stylelint": "^9.3.0",
-    "stylelint-config-standard": "17.0.0",
-    "stylelint-processor-styled-components": "0.2.1",
-    "whatwg-fetch": "2.0.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "npm run prettier",
-      "eslint --fix",
-      "npm run lint",
-      "npm run lint:css",
-      "git add"
-    ]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/**/demo*.js",
-      "!src/*.js"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/?(*.)(spec|test).js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      ".+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      ".+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "react-native$": "react-native-web",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx"
-    ]
-  },
-  "main": "dist",
-  "files": [
-    "dist",
-    "interface",
-    "npm-shrinkwrap.json"
-  ],
-  "babel": {
-    "presets": [
-      "react-app"
-    ],
-    "plugins": []
-  },
-  "engines": {
-    "node": ">=8.0.0",
-    "npm": ">=5.2.0"
-  }
-}
+{  "name": "@lugia/lugia-web",  "version": "1.0.110-14",  "dependencies": {    "@lugia/css": "1.0.12",    "@lugia/devtools-material": "^1.0.6",    "@lugia/math": "^1.0.6",    "@lugia/object-utils": "1.0.8",    "@lugia/theme-config": "1.0.15",    "@lugia/theme-core": "1.0.15",    "@lugia/theme-css-hoc": "^1.0.29",    "@lugia/theme-hoc": "^1.0.21",    "@lugia/theme-hoc-devtools": "1.0.2",    "@lugia/type-utils": "^1.0.4",    "babel-polyfill": "6.26.0",    "classnames": "2.2.5",    "core-js": "^2.5.7",    "css-animation": "1.4.1",    "decamelize": "^3.2.0",    "deepmerge": "^3.2.0",    "enquire.js": "^2.1.6",    "events": "^3.0.0",    "moment": "^2.22.2",    "prop-types": "15.5.10",    "prop-types-extra": "1.0.1",    "rc-align": "2.4.3",    "rc-animate": "2.4.1",    "rc-pagination": "1.17.3",    "rc-select": "^8.6.4",    "rc-table": "^6.4.0",    "rc-util": "4.0.4",    "react-error-overlay": "1.0.9",    "styled-components": "^4.2.0",    "warning": "3.0.0"  },  "peerDependencies": {    "react": ">16.0.0",    "react-dom": ">16.0.0"  },  "author": "ysstech",  "scripts": {    "prettier": "prettier --write",    "lint": "eslint --ext .js src mock tests",    "lint:fix": "eslint --fix --ext .js src mock tests",    "lint-staged": "lint-staged",    "lint:css": "stylelint './src/widgets/**/*.js'",    "start": "lugia-scripts start",    "build": "lugia-scripts build",    "flow": "flow --show-all-errors > flow-error-detail.log",    "flow-check": "node readflow.js",    "flow-typed": "flow-typed",    "reset-flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",    "test": "node scripts/test.js --env=jsdom",    "cover": "node scripts/test.js --env=jsdom  --coverage",    "clean": "npx shx rm -rf dist/ interface/ npm-shrinkwrap.all.json",    "dist": "node scripts/create.js && npm run clean && npx cross-env BABEL_ENV=production gulp ",    "create-info": "lugia-create-info"  },  "devDependencies": {    "@lugia/jverify": "1.0.6",    "@lugia/lugiax-router": "^1.0.10",    "@lugia/mega-scripts": "^1.3.35",    "@lugia/react-test-utils": "^1.0.0",    "autoprefixer": "7.1.6",    "babel-core": "6.26.0",    "babel-eslint": "7.2.3",    "babel-jest": "23.4.2",    "babel-loader": "7.1.2",    "babel-plugin-react-flow-props-to-prop-types": "0.15.0",    "babel-preset-react-app": "3.1.0",    "babel-runtime": "6.26.0",    "chai": "4.1.0",    "chalk": "1.1.3",    "cross-env": "5.1.4",    "debug": "2.6.8",    "dotenv": "4.0.0",    "enzyme": "3.3.0",    "enzyme-adapter-react-16": "^1.5.0",    "eslint": "4.10.0",    "eslint-config-react-app": "2.0.1",    "eslint-loader": "1.9.0",    "eslint-plugin-flowtype": "2.39.1",    "eslint-plugin-import": "2.8.0",    "eslint-plugin-jsx-a11y": "5.1.1",    "eslint-plugin-react": "7.4.0",    "flow-bin": "^0.93.0",    "flow-typed": "^2.5.1",    "fs-extra": "3.0.1",    "global": "^4.3.2",    "gulp": "3.9.1",    "gulp-babel": "6.1.2",    "gulp-changed": "3",    "gulp-newer": "1",    "gulp-rename": "1.2.2",    "gulp-uglify": "^3.0.1",    "gulp-watch": "4",    "husky": "^1.0.0-rc.9",    "identity-obj-proxy": "3.0.0",    "immutable": "3.8.1",    "install": "0.10.1",    "isomorphic-fetch": "2.2.1",    "jest": "23.4.2",    "jest-cli": "23.4.2",    "jest-styled-components": "6.2.0",    "jsdom": "11.12.0",    "jsoneditor": "^5.34.0",    "lint-staged": "7.2.0",    "prettier": "^1.13.5",    "promise": "8.0.1",    "pump": "1.0.2",    "raf": "3.4.0",    "react": "^16.8.6",    "react-dom": "^16.8.6",    "react-test-renderer": "^16.8.2",    "rimraf": "^2.6.2",    "shx": "0.2.2",    "stylelint": "^9.3.0",    "stylelint-config-standard": "17.0.0",    "stylelint-processor-styled-components": "0.2.1",    "whatwg-fetch": "2.0.3"  },  "husky": {    "hooks": {      "pre-commit": "npm run lint-staged"    }  },  "lint-staged": {    "src/**/*.js": [      "npm run prettier",      "eslint --fix",      "npm run lint",      "npm run lint:css",      "git add"    ]  },  "jest": {    "collectCoverageFrom": [      "src/**/*.{js,jsx}",      "!src/**/demo*.js",      "!src/*.js"    ],    "setupFiles": [      "<rootDir>/config/polyfills.js"    ],    "testMatch": [      "<rootDir>/src/**/__tests__/**/?(*.)(spec|test).js?(x)",      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"    ],    "testEnvironment": "node",    "testURL": "http://localhost",    "transform": {      ".+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",      ".+\\.css$": "<rootDir>/config/jest/cssTransform.js",      "(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"    },    "transformIgnorePatterns": [      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"    ],    "moduleNameMapper": {      "react-native$": "react-native-web",      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",      "\\.(css|less)$": "identity-obj-proxy"    },    "moduleFileExtensions": [      "web.js",      "js",      "json",      "web.jsx",      "jsx"    ]  },  "main": "dist",  "files": [    "dist",    "interface",    "npm-shrinkwrap.json"  ],  "babel": {    "presets": [      "react-app"    ],    "plugins": []  },  "engines": {    "node": ">=8.0.0",    "npm": ">=5.2.0"  }}
