--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "@lugia/css": "^1.0.15",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.7",
-    "@lugia/object-utils": "^1.0.9",
+    "@lugia/object-utils": "^1.0.10",
     "@lugia/ramada": "^1.0.1",
-    "@lugia/theme-config": "^1.0.21",
-    "@lugia/theme-core": "^1.0.21",
-    "@lugia/theme-css-hoc": "^1.0.40",
-    "@lugia/theme-hoc": "^1.0.29",
-    "@lugia/theme-hoc-devtools": "1.0.3",
-    "@lugia/theme-utils": "^1.0.2",
+    "@lugia/theme-config": "^1.0.23",
+    "@lugia/theme-core": "^1.0.23",
+    "@lugia/theme-css-hoc": "^1.0.45",
+    "@lugia/theme-hoc": "^1.0.31",
+    "@lugia/theme-hoc-devtools": "^1.0.3",
+    "@lugia/theme-utils": "^1.0.3",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
