--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.0",
+  "version": "1.1.0-1",
   "dependencies": {
     "@lugia/css": "^1.0.15",
     "@lugia/devtools-material": "^1.0.6",
