--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "@lugia/lugia-web",
   "version": "1.1.0-2",
   "dependencies": {
-    "@lugia/css": "^1.0.15",
+    "@lugia/css": "1.0.17",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.7",
     "@lugia/object-utils": "1.0.11",
     "@lugia/ramada": "^1.0.1",
-    "@lugia/theme-config": "1.0.26",
-    "@lugia/theme-core": "1.0.26",
-    "@lugia/theme-css-hoc": "1.0.49",
-    "@lugia/theme-hoc": "1.0.37",
+    "@lugia/theme-config": "1.0.27",
+    "@lugia/theme-core": "1.0.27",
+    "@lugia/theme-css-hoc": "1.0.50",
+    "@lugia/theme-hoc": "1.0.38",
     "@lugia/theme-hoc-devtools": "1.0.4",
-    "@lugia/theme-utils": "1.0.4",
+    "@lugia/theme-utils": "1.0.5",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
