--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@lugia/lugia-web",
   "version": "1.1.0-7",
   "dependencies": {
-    "@lugia/css": "1.0.17",
+    "@lugia/css": "^1.0.17",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.7",
-    "@lugia/object-utils": "1.0.11",
-    "@lugia/theme-config": "1.0.27",
-    "@lugia/theme-css-hoc": "1.0.51",
-    "@lugia/theme-hoc": "1.0.39",
-    "@lugia/theme-utils": "1.0.5",
+    "@lugia/object-utils": "^1.0.11",
+    "@lugia/theme-config": "^1.0.27",
+    "@lugia/theme-css-hoc": "^1.0.51",
+    "@lugia/theme-hoc": "^1.0.39",
+    "@lugia/theme-utils": "^1.0.5",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
