--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@lugia/object-utils": "^1.0.11",
     "@lugia/theme-config": "1.0.29",
     "@lugia/theme-core": "1.0.29",
-    "@lugia/theme-css-hoc": "1.0.52",
+    "@lugia/theme-css-hoc": "1.0.53",
     "@lugia/theme-hoc": "1.0.40",
     "@lugia/theme-hoc-devtools": "1.0.6",
-    "@lugia/theme-utils": "^1.0.5",
+    "@lugia/theme-utils": "1.0.6",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
