--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0-12",
   "dependencies": {
     "@lugia/css": "^1.0.17",
-    "@lugia/devtools-material": "^1.0.13",
+    "@lugia/devtools-material": "^1.0.17",
     "@lugia/math": "^1.0.7",
     "@lugia/object-utils": "^1.0.11",
     "@lugia/theme-config": "1.0.29",
@@ -54,6 +54,7 @@
     "test": "node scripts/test.js --env=jsdom",
     "cover": "node scripts/test.js --env=jsdom  --coverage",
     "clean": "npx shx rm -rf dist/ interface/ npm-shrinkwrap.all.json",
+    "create": "node scripts/create.js",
     "dist": "node scripts/create.js && npm run clean && npx cross-env BABEL_ENV=production gulp ",
     "create-info": "lugia-create-info"
   },
