--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0-13",
   "dependencies": {
     "@lugia/css": "^1.0.17",
-    "@lugia/devtools-material": "^1.0.17",
+    "@lugia/devtools-material": "1.0.20",
     "@lugia/math": "^1.0.7",
     "@lugia/object-utils": "^1.0.11",
     "@lugia/theme-config": "1.0.29",
