--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.0-25",
+  "version": "1.1.0-26",
   "dependencies": {
     "@lugia/css": "^1.0.17",
-    "@lugia/devtools-material": "^1.0.27",
     "@lugia/math": "^1.0.7",
     "@lugia/object-utils": "^1.0.11",
     "@lugia/theme-config": "1.0.32",
@@ -59,6 +58,7 @@
     "create-info": "lugia-create-info"
   },
   "devDependencies": {
+    "@lugia/devtools-material": "^1.0.29",
     "@lugia/jverify": "1.0.6",
     "@lugia/lugiax-router": "^1.0.10",
     "@lugia/mega-scripts": "^1.3.35",
@@ -172,7 +172,7 @@
       "jsx"
     ]
   },
-  "main": "dist",
+  "main": "dist/designInfo.js",
   "files": [
     "dist",
     "interface",
