--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "chai": "4.1.0",
     "chalk": "1.1.3",
     "cross-env": "5.1.4",
-    "debug": "2.6.8",
+    "debug": "^4.1.1",
     "dotenv": "4.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.5.0",
