--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.0-30",
+  "version": "1.1.0-31",
   "dependencies": {
     "@lugia/css": "^1.0.17",
-    "@lugia/math": "^1.0.7",
+    "@lugia/math": "1.0.8",
     "@lugia/object-utils": "^1.0.11",
+    "@lugia/ramada": "1.0.2",
     "@lugia/theme-config": "1.0.32",
     "@lugia/theme-core": "1.0.32",
     "@lugia/theme-css-hoc": "^1.0.58",
