--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "global": "^4.3.2",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
+    "gulp-base64": "^0.1.3",
     "gulp-changed": "3",
     "gulp-newer": "1",
     "gulp-rename": "1.2.2",
