--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.0-42",
+  "version": "1.1.0-43",
   "dependencies": {
     "@lugia/css": "1.0.18",
     "@lugia/math": "1.0.8",
-    "@lugia/object-utils": "1.0.12",
+    "@lugia/object-utils": "1.0.13",
     "@lugia/ramada": "1.0.2",
-    "@lugia/theme-config": "1.0.33",
-    "@lugia/theme-core": "1.0.33",
-    "@lugia/theme-css-hoc": "1.0.60",
-    "@lugia/theme-hoc": "1.0.44",
+    "@lugia/theme-config": "^1.0.34",
+    "@lugia/theme-core": "^1.0.34",
+    "@lugia/theme-css-hoc": "^1.0.61",
+    "@lugia/theme-hoc": "^1.0.45",
     "@lugia/theme-hoc-devtools": "1.0.7",
     "@lugia/theme-utils": "1.0.7",
     "@lugia/type-utils": "^1.0.4",
