--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "dependencies": {
-    "@lugia/css": "1.0.18",
-    "@lugia/math": "1.0.8",
-    "@lugia/object-utils": "1.0.14",
-    "@lugia/ramada": "1.0.2",
-    "@lugia/theme-config": "1.0.35",
-    "@lugia/theme-core": "1.0.35",
-    "@lugia/theme-css-hoc": "1.0.62",
-    "@lugia/theme-hoc": "1.0.46",
-    "@lugia/theme-hoc-devtools": "1.0.7",
-    "@lugia/theme-utils": "1.0.7",
+    "@lugia/css": "^1.0.18",
+    "@lugia/math": "^1.0.8",
+    "@lugia/object-utils": "^1.0.14",
+    "@lugia/ramada": "^1.0.2",
+    "@lugia/theme-config": "^1.0.35",
+    "@lugia/theme-core": "^1.0.35",
+    "@lugia/theme-css-hoc": "^1.0.62",
+    "@lugia/theme-hoc": "^1.0.47",
+    "@lugia/theme-hoc-devtools": "^1.0.7",
+    "@lugia/theme-utils": "^1.0.7",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
@@ -59,7 +59,7 @@
     "create-info": "lugia-create-info"
   },
   "devDependencies": {
-    "@lugia/devtools-material": "^1.0.29",
+    "@lugia/devtools-material": "^1.0.32-alpha.0",
     "@lugia/jverify": "1.0.6",
     "@lugia/lugiax-router": "^1.0.10",
     "@lugia/mega-scripts": "^1.3.35",
