--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@lugia/lugia-web",
   "version": "1.1.2",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@lugia/css": "^1.0.18",
     "@lugia/math": "^1.0.8",
