--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.2",
+  "version": "1.1.3-alpha.1",
   "publishConfig": {
     "access": "public"
   },
