--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "styled-components": "4.2.0"
   },
   "repository": {
-    "type": "https://github.com/lugia-ysstech/lugia-web"
+    "type" : "git",
+    "url": "https://github.com/lugia-ysstech/lugia-web"
   },
+  "homepage": "http://lugia.tech",
   "license": "Apache License 2.0",
   "author": "ysstech",
   "scripts": {
