--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.6-alpha-1",
+  "version": "1.1.6",
   "publishConfig": {
     "access": "public"
   },
