--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.8-alpha-6",
+  "version": "1.1.8-alpha-23",
+  "keywords": [
+    "lugia",
+    "design",
+    "ui",
+    "framework",
+    "frontend",
+    "react",
+    "react-component",
+    "component",
+    "components"
+  ],
   "publishConfig": {
     "access": "public"
   },
