--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.9-alpha-8",
+  "version": "1.1.9-alpha-12",
   "keywords": [
     "lugia",
     "design",
@@ -80,7 +80,7 @@
     "create-info": "lugia-create-info"
   },
   "devDependencies": {
-    "@lugia/devtools-material": "^1.0.36",
+    "@lugia/devtools-material": "^1.0.37-alpha-0",
     "@lugia/jverify": "^1.0.10",
     "@lugia/lugiax-router": "^1.0.10",
     "@lugia/mega-scripts": "^1.3.35",
