--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.1.9",
+  "version": "1.2.0-alpha-1",
   "keywords": [
     "lugia",
     "design",
