--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "rc-animate": "2.4.1",
     "rc-pagination": "1.17.3",
     "rc-select": "^8.6.4",
-    "rc-table": "^6.4.0",
+    "rc-table": "^7.0.0-rc.10",
     "rc-util": "4.0.4",
     "react-error-overlay": "1.0.9",
     "warning": "3.0.0"
