--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.2.0",
+  "version": "1.2.1-alpha-0",
   "keywords": [
     "lugia",
     "design",
